# evolve

./: .gitignore  pyproject.toml  requirements.txt
src/: animals.py  constants.py  factories.py  grass.py  plant.py  randomizer.py  structs.py  test.py  utils.py  value_objects.py
src/tests/: conftest.py
