[tool.poetry]
name = "evolve"
version = "0.1.0"
description = ""
authors = ["Евгений Дороватовский <e.dorovatovskyi@benovate.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.1"
pytest-repeat = "^0.9.1"
numpy = "^1.24.1"
pygame = "2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
